--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <div class="col-lg-6">
                             <ul>
 
-                                <li><i class="icofont-rounded-right" style="position: relative;"></i> <strong>Highest degree:</strong> B.&nbsp;Tech in Computer&nbsp;Science&nbsp;and&nbsp;Engineering</li>
+                                <li><i class="icofont-rounded-right" style="position: relative;"></i> <strong>Highest degree:</strong> B.&nbsp;Tech&nbsp;in&nbsp;CSE</li>
                                 <li><i class="icofont-rounded-right" style="position: relative;"></i> <strong>Email:</strong> taritg.public@gmail.com</li>
 
                             </ul>
@@ -249,11 +249,11 @@
                     <p>
                         I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. Areas of interest include Data structures and Algorithms, System Design, Cloud Architecture, Security and Cryptography. <br><br>
                         <ul>
-                            <li>&#9827; Love to solve challenging problems</li>
-                            <li>&#9829; Biased for action</li>
-                            <li>&#9830; Dive deep into problems </li>
-                            <li>&#9822; I do not hesitate to (respectfully) challenge any decision which I disagree</li>
-                            <li>&#9824; Focus on long-term goals </li>
+                            <li><b>&#9827;</b> Love to solve challenging problems</li>
+                            <li><b>&#9829;</b> Biased for action</li>
+                            <li><b>&#9830;</b> Dive deep into problems </li>
+                            <li><b>&#9822;</b> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
+                            <li><b>&#9824;</b> Focus on long-term goals </li>
                         </ul>
                     </p>
                 </div>
