--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <!-- End Counts -->
 
         <!-- ======= Skills  ======= -->
-        <div class="skills container">
+<!--         <div class="skills container">
 
             <div class="section-title">
                 <h2>Skills</h2>
@@ -358,7 +358,7 @@
 
             </div>
 
-        </div>
+        </div> -->
         <!-- End Skills -->
 
         <!-- ======= Interests ======= -->
@@ -378,13 +378,13 @@
 
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <i class="icofont-robot" style="color: #5578ff;"></i>
+                        <i class="icofont-users" style="color: #5578ff;"></i>
                         <h3>Authentication and Authorization architecture</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <i class="icofont-site-map" style="color: #e80368;"></i>
+                        <i class="icofont-shield" style="color: #e80368;"></i>
                         <h3>Cloud Security and Cryptography</h3>
                     </div>
                 </div>
