--- a/index.html
+++ b/index.html
@@ -311,21 +311,21 @@
                     <div class="progress">
                         <span class="skill">AWS Security services <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div> -->
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
                         <span class="skill">Cryptography <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div> -->
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
                         <span class="skill">Authentication and authorization architecture design <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div> -->
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                         </div>
                     </div>
 
@@ -336,21 +336,21 @@
                     <div class="progress">
                         <span class="skill">OpenId Connect (OIDC), SAML federation <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div> -->
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
                         <span class="skill"><b class="val"></b></span>
                         <div class="progress-bar-wrap">
-<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div> -->
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
                         <span class="skill"><b class="val"></b></span>
                         <div class="progress-bar-wrap">
-<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div> -->
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
                         </div>
                     </div>
 
