--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
                     <p>
                         I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. Areas of interest include Data structures and Algorithms, System Design, Cloud Architecture, Security and Cryptography. <br><br>
                         <ul>
-                            <li><b>&#9827;</b> Love to solve challenging problems</li>
-                            <li><b>&#9829;</b> Biased for action</li>
-                            <li><b>&#9830;</b> Dive deep into problems </li>
-                            <li><b>&#9822;</b> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
-                            <li><b>&#9824;</b> Focus on long-term goals </li>
+                            <li><i class="icofont-tag-double"> Love to solve challenging problems</li>
+                            <li><i class="icofont-tag-double"> Biased for action</li>
+                            <li><i class="icofont-tag-double"> Dive deep into problems </li>
+                            <li><i class="icofont-tag-double"> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
+                            <li><i class="icofont-tag-double"> Focus on long-term goals </li>
                         </ul>
                     </p>
                 </div>
