--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Hello! I am Tarit Goswami</h3>
                     <p>
-                        I am Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a>
+                        Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a>
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
@@ -249,11 +249,11 @@
                     <p>
                         I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. Areas of interest include Data structures and Algorithms, System Design, Cloud Architecture, Security and Cryptography. <br><br>
                         <ul>
-                            <li><i class="icofont-tag-double"> Love to solve challenging problems</li>
-                            <li><i class="icofont-tag-double"> Biased for action</li>
-                            <li><i class="icofont-tag-double"> Dive deep into problems </li>
-                            <li><i class="icofont-tag-double"> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
-                            <li><i class="icofont-tag-double"> Focus on long-term goals </li>
+                            <li><i class="icofont-tag-double"></i> Love to solve challenging problems</li>
+                            <li><i class="icofont-tag-double"></i> Biased for action</li>
+                            <li><i class="icofont-tag-double"></i> Dive deep into problems </li>
+                            <li><i class="icofont-tag-double"></i> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
+                            <li><i class="icofont-tag-double"></i> Focus on long-term goals </li>
                         </ul>
                     </p>
                 </div>
