--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Hello! I am Tarit Goswami</h3>
                     <p>
-                        Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a>
+                        Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a> under Security and Cryptography team
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
