--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
                     <p>
                         I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. Areas of interest include Data structures and Algorithms, System Design, Cloud Architecture, Security and Cryptography. <br><br>
                         <ul>
-                            <li><i class="icofont-tag-double"></i> Love to solve challenging problems</li>
-                            <li><i class="icofont-tag-double"></i> Biased for action</li>
-                            <li><i class="icofont-tag-double"></i> Dive deep into problems </li>
-                            <li><i class="icofont-tag-double"></i> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
-                            <li><i class="icofont-tag-double"></i> Focus on long-term goals </li>
+                            <li><i class="icofont-butterfly"></i> Love to solve challenging problems</li>
+                            <li><i class="icofont-butterfly"></i> Biased for action</li>
+                            <li><i class="icofont-butterfly"></i> Dive deep into problems </li>
+                            <li><i class="icofont-butterfly"></i> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
+                            <li><i class="icofont-butterfly"></i> Focus on long-term goals </li>
                         </ul>
                     </p>
                 </div>
