--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <img src="img/profile pic.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>Hello! I am Tarit Goswami</h3>
+                    <h3>Hello! I am Tarit Goswami <i class="icofont-amazon"></i></h3>
                     <p>
                         Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a> under Security and Cryptography team
                     </p>
@@ -249,11 +249,11 @@
                     <p>
                         I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. Areas of interest include Data structures and Algorithms, System Design, Cloud Architecture, Security and Cryptography. <br><br>
                         <ul>
-                            <li><i class="icofont-butterfly"></i> Love to solve challenging problems</li>
-                            <li><i class="icofont-butterfly"></i> Biased for action</li>
-                            <li><i class="icofont-butterfly"></i> Dive deep into problems </li>
-                            <li><i class="icofont-butterfly"></i> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
-                            <li><i class="icofont-butterfly"></i> Focus on long-term goals </li>
+                            <li><i class="icofont-deer-head"></i> Love to solve challenging problems</li>
+                            <li><i class="icofont-fish-3"></i> Biased for action</li>
+                            <li><i class="icofont-elephant"></i></i> Dive deep into problems </li>
+                            <li><i class="icofont-lion-head-2"></i> I do not hesitate to (respectfully) challenge any decision which I disagree</li>
+                            <li><i class="icofont-fox"></i> Focus on long-term goals </li>
                         </ul>
                     </p>
                 </div>
@@ -438,11 +438,12 @@
                     <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
 
-                        <p>Currently working at AWS on services Identity and Access Management, AWS Cognito, AWS CloudHSM, Amazon Certificate Manager (SSL Certificate), CloudTrail, Key Management Service etc. My day to day job is to provide durable, secure solution to implement a business use case for these mentioned services. Also, troubleshooting different technical issues is another big part of my job. Here is a video: https://www.youtube.com/watch?v=GC3bWcFFZTo</p>
+                        <p>Currently working at AWS on services Identity and Access Management, AWS Cognito, AWS CloudHSM, Amazon Certificate Manager (SSL Certificate), CloudTrail, Key Management Service etc. My day to day job is to provide durable, secure solution to implement a business use case for these mentioned services. Also, troubleshooting different technical issues is another big part of my job.</p>
 
                     </div>
-
-                    <h3 class="resume-title">Education</h3>
+                    <br><br>
+                    <iframe width="500" height="300" src="https://www.youtube.com/embed/GC3bWcFFZTo" title="What&#39;s it like to work at Amazon Web Services? Meet our Cloud Support Engineers." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="resume-title">Education <i class="icofont-university"></i></h3>
 
                     <div class="resume-item">
                         <h4>Bachelor of technology, Computer Science and Engineering</h4>
@@ -452,7 +453,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="resume-title">Professional Experience</h3>
+                    <h3 class="resume-title">Professional Experience <i class="icofont-briefcase-1"></i></h3>
                     
                     <div class="resume-item">
                         <h4>Cloud Engineer (Security and Cryptography), Amazon Web Services</h4>
