--- a/index.html
+++ b/index.html
@@ -453,6 +453,18 @@
                         <p><em>Jalpaiguri Govt. Engineering College, West Bengal, India</em></p>
                         <p>I have completed my 4 year graduation degree in Computer Science and Engineering. </p>
                     </div>
+
+                    <div class="resume-item">
+                        <h4>High School, Science (Math, Phy, Chem)</h4>
+                        <h5>2013 - 2015</h5>
+                        <p><em>Bankura Banga Vidyalaya, West Bengal, India</em></p>
+                    </div>
+
+                    <div class="resume-item">
+                        <h4>Secondary School</h4>
+                        <h5>2008 - 2013</h5>
+                        <p><em>Nikunjapur H.S. School, West Bengal, India</em></p>
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience <i class="icofont-briefcase-1"></i></h3>
